--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -67,6 +67,7 @@ table {
  */
 
 html {
+  
   font-size: 16px;
 }
 
@@ -77,10 +78,13 @@ body {
   height: 100vh;
   justify-content: center;
   width: 100%;
+  
 }
+
 
 h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem; 
   text-align: center;
+  text-decoration-color: rgba(9, 239, 255, 0.589);
 }
